--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,12 @@
 PORT=8000
 
 ORIGIN=['http://localhost:3000/']
+
+NODE_ENV= development
+DB_URI="mongodb+srv://junaid:junaid123@lms.07ozlj5.mongodb.net/Lms"
+
+CLOUD_SECRET_KEY=3v68_u2nCgzJqh5TwvEEQCbbous
+
+CLOUD_API_KEY=677927396383878
+
+CLOUD_NAME=dujy1rqi3
