--- a/server/.env
+++ b/server/.env
@@ -3,10 +3,12 @@ PORT=8000
 ORIGIN=['http://localhost:3000/']
 
 NODE_ENV= development
-DB_URI="mongodb+srv://junaid:junaid123@lms.07ozlj5.mongodb.net/Lms"
+DB_URL='mongodb+srv://junaid:junaid123@lms.07ozlj5.mongodb.net/Lms'
 
 CLOUD_SECRET_KEY=3v68_u2nCgzJqh5TwvEEQCbbous
 
 CLOUD_API_KEY=677927396383878
 
 CLOUD_NAME=dujy1rqi3
+
+REDIS_URL="rediss://default:AXjMAAIjcDE0OWFlZWY5NTdiMjY0NmM0YTk4M2JhNjRkMDdhZmE4OXAxMA@nearby-caribou-30924.upstash.io:6379
