--- a/server/.env
+++ b/server/.env
@@ -11,4 +11,10 @@ CLOUD_API_KEY=677927396383878
 
 CLOUD_NAME=dujy1rqi3
 
-REDIS_URL="rediss://default:AXjMAAIjcDE0OWFlZWY5NTdiMjY0NmM0YTk4M2JhNjRkMDdhZmE4OXAxMA@nearby-caribou-30924.upstash.io:6379
+REDIS_URL="rediss://default:AXjMAAIjcDE0OWFlZWY5NTdiMjY0NmM0YTk4M2JhNjRkMDdhZmE4OXAxMA@nearby-caribou-30924.upstash.io:6379"
+ACTIVATION_TOKEN_SECRET=785298359
+SMTP_HOST = smtp.gmail.com
+SMTP_PORT = 465
+SMTP_SERVICE = gmail
+SMTP_MAIL = junaidnaveed030000@gmail.com
+SMTP_PASSWORD = maypzbaetivssfzh
