create activate user api

--- a/server/.env
+++ b/server/.env
@@ -18,3 +18,5 @@ SMTP_PORT = 465
 SMTP_SERVICE = gmail
 SMTP_MAIL = junaidnaveed030000@gmail.com
 SMTP_PASSWORD = maypzbaetivssfzh
+ACCESS_TOKEN = '5/9I@:F£(4/n8O,QGcvr#=]qr/t6lB:7e4k[4>1*@,pb7f>}GX'
+REFRESH_TOKEN = ':@N-+*6YFn)[adzXX14QCK%%XV;A\u]X.c)><k[5a)74U*.3Te'
