--- a/server/.env
+++ b/server/.env
@@ -20,3 +20,5 @@ SMTP_MAIL = junaidnaveed030000@gmail.com
 SMTP_PASSWORD = maypzbaetivssfzh
 ACCESS_TOKEN = '5/9I@:F£(4/n8O,QGcvr#=]qr/t6lB:7e4k[4>1*@,pb7f>}GX'
 REFRESH_TOKEN = ':@N-+*6YFn)[adzXX14QCK%%XV;A\u]X.c)><k[5a)74U*.3Te'
+ACCESS_TOKEN_EXPIRE = 5
+REFRESH_TOKEN_EXPIRE = 59
