--- a/server/package.json
+++ b/server/package.json
@@ -1,37 +1,40 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "description": "",
+  "license": "ISC",
+  "author": "",
+  "type": "commonjs",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn --transpile-only server.ts"
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/cookie-parser": "^1.4.7",
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^22.0.0",
+    "@types/ejs": "^3.1.5",
+    "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.8",
+    "@types/node": "^22.10.10",
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^2.4.0",
-    "cookie-parser": "^1.4.6",
+    "cloudinary": "^2.5.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
-    "express": "^4.19.2",
-    "ioredis": "^5.4.1",
+    "express": "^4.21.2",
+    "ioredis": "^5.4.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.1",
-    "nodemailer": "^6.9.14",
+    "mongoose": "^8.9.5",
+    "nodemailer": "^6.10.0",
+    "redis": "^4.7.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.7.3"
   },
   "devDependencies": {
-    "@types/ejs": "^3.1.5",
-    "@types/nodemailer": "^6.4.15"
+    "@types/nodemailer": "^6.4.17",
+    "@types/redis": "^4.0.10"
   }
 }
