--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.4.2",
+    "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.2",
     "@reduxjs/toolkit": "^2.5.1",
     "formik": "^2.4.6",
@@ -22,6 +22,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-pro-sidebar": "^0.7.1",
     "react-redux": "^9.2.0",
     "yup": "^1.6.1"
   },
