--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^6.4.2",
     "@mui/x-data-grid": "^7.27.1",
     "@reduxjs/toolkit": "^2.5.1",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.7.0",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
     "next": "15.1.5",
