--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "redis": "^4.7.0",
+    "stripe": "^17.7.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
   },
