--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --respawn --transpile-only server.ts"
+    "dev": "ts-node-dev --respawn --transpile-only server.ts",
+    "build": "tsc"
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -34,6 +35,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "redis": "^4.7.0",
+    "serverless-http": "^4.0.0",
     "socket.io": "^4.8.1",
     "stripe": "^17.7.0",
     "ts-node-dev": "^2.0.0",
