--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,14 +2,12 @@
   "version": 2,
   "builds": [
     {
-      "src": "server.ts",
+      "src": "api/**/*.ts",
       "use": "@vercel/node"
     }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/"
-    }
+    { "src": "/api/(.*)", "dest": "/api/index.ts" },
+    { "src": "/(.*)", "dest": "../client/$1" }
   ]
 }
